# investa-offer-intelligence

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/: copilot-instructions.md
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: routes.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/llm/: __init__.py  client.py
backend/app/llm/prompts/: __init__.py  extraction_system.txt  extraction_user.txt  reply_known_system.txt  reply_known_user.txt  scoring_system.txt  scoring_user.txt  vision_system.txt  vision_user.txt
backend/app/pipeline/: __init__.py  addressing.py  dedup.py  extraction.py  ingestion.py  orchestrator.py  reply.py  scoring.py  scoring.yaml  vision.py
backend/app/pipeline/enrichment/: __init__.py  cache.py  mietspiegel.py  nominatim.py  overpass.py  service.py  wikidata.py
backend/app/schemas/: models.py
backend/data/: mietspiegel_seed.csv
backend/db/init/: 001_extensions.sql
backend/scripts/: __init__.py  make_pptx.py  make_shots.py  seed_objects.py
backend/tests/: test_addressing.py  test_mietspiegel.py  test_scoring.py
docs/: ARCHITECTURE.md  PRESENTATION_BUSINESS.md  PRESENTATION_GUIDE.md  PRESENTATION_TECHNICAL.md  PROMPTS.md
frontend/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
frontend/src/components/: DashboardStats.tsx  DocumentOverview.tsx  MapCard.tsx  ScoreBadge.tsx  ScoreGauge.tsx  UploadBox.tsx
(+3 files in other folders)
