[project]
name = "investa-offer-intel"
version = "0.1.0"
description = "AI-assisted triage, enrichment and scoring of broker real-estate offers"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0.30",
    "psycopg[binary]>=3.1",
    "greenlet>=3.0",
    "httpx>=0.27",
    "openai>=1.30",
    "python-multipart>=0.0.9",
    "extract-msg>=0.48",
    "pdfplumber>=0.11",
    "pypdf>=4.2",
    "rapidfuzz>=3.9",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
ocr = ["pytesseract>=0.3.10", "pillow>=10.3"]
dev = ["ruff>=0.4", "black>=24.4", "pytest>=8.2", "pytest-asyncio>=0.23"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
